--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ dist/
 # dependencies
 node_modules/
 
+# locales
+astro_tmp_pages_*
 # logs
 npm-debug.log*
 yarn-debug.log*
@@ -30,3 +32,6 @@ package-lock.json
 # ignore vercel/netlify adapter
 .vercel
 .netlify
+
+# sst
+.sst
