--- a/package.json
+++ b/package.json
@@ -5,37 +5,34 @@
   "author": "ray",
   "license": "MIT",
   "scripts": {
-    "dev": " astro dev",
     "build": "astro build",
-    "preview": "astro preview",
+    "dev": " astro dev",
     "format": "prettier -w ./src",
     "generate": "drizzle-kit generate",
-    "studio": "drizzle-kit studio",
     "hide-toolbar": "astro preferences disable devToolbar",
-    "show-toolbar": "astro preferences enable devToolbar"
-    },
+    "preview": "astro preview",
+    "show-toolbar": "astro preferences enable devToolbar",
+    "studio": "drizzle-kit studio"
+  },
   "dependencies": {
     "@astrojs/mdx": "^2.1.1",
-    "@astrojs/partytown": "^2.0.4",
     "@astrojs/react": "^3.0.9",
     "@astrojs/rss": "^4.0.4",
     "@astrojs/sitemap": "^3.0.5",
-    "@astrojs/solid-js": "^4.1.0",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.7.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@vercel/analytics": "^1.2.2",
-    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.3.2",
     "astro-auto-import": "^0.4.2",
     "astro-font": "^0.0.77",
+    "astro-i18n-aut": "^0.7.0",
     "astro-icon": "^1.1.0",
     "astro-loading-indicator": "^0.4.0",
+    "astro-sst": "2.43.5",
     "better-sqlite3": "^9.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -56,6 +53,7 @@
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
     "sonner": "^1.4.41",
+    "sst": "3.1.10",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
