--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,6 +1,6 @@
 {
   "site": {
-    "title": "hello",
+    "title": "haitangi18n",
     "base_url": "",
     "base_path": "/",
     "trailing_slash": false,
