--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "remark-toc": "^9.0.0",
     "sonner": "^1.4.41",
     "sst": "3.1.10",
+    "sharp": "^0.33.5",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
@@ -76,7 +77,6 @@
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "sass": "^1.70.0",
-    "sharp": "0.33.1",
     "tailwind-bootstrap-grid": "^5.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
